--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -114,7 +114,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     shortcut: ["ctrl+shift+0", "meta+shift+0"],
                     action: this.$.context.zoomFitToSelection.bind(this.$.context)
                 });
-                this.$.toolbar.addCommand({
+                this.$.context.addCommand({
                     hidden: true,
                     icon: "fa fa-circle",
                     description: "Blocks",
