--- a/dude-graph.html
+++ b/dude-graph.html
@@ -78,7 +78,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     <paper-toast id="error"></paper-toast>
                     <dude-graph-editor id="editor"
                                        class="layout horizontal flex-3"
-                                       models="[[ models ]]"
+                                       models="{{ models }}"
                                        on-dude-graph-editor-error="_error">
                     </dude-graph-editor>
                 </div>
@@ -206,6 +206,29 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             createBlock: function (blockData) {
                 var toRenderBlock = this.$.editor.createBlock(blockData);
                 this.$.editor.focusBlock(toRenderBlock);
+            },
+
+            createVariable: function (name, type, value) {
+                this.push("models.0.group.items", {
+                    "item": {
+                        "name": name,
+                        "icon": "fa fa-circle",
+                        "data": {
+                            "cgType": "Variable",
+                            "cgValueType": type,
+                            "cgValue": value,
+                            "cgName": name,
+                            "cgInputs": [],
+                            "cgOutputs": [
+                                {
+                                    "cgType": "Point",
+                                    "cgValueType": type,
+                                    "cgName": "value"
+                                }
+                            ]
+                        }
+                    }
+                });
             },
 
             /**
