--- a/panels/dude-graph-create-variable.html
+++ b/panels/dude-graph-create-variable.html
@@ -66,8 +66,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                             this.get("_variableType"),
                             this.get("_variableValue")
                     );
-                    this.set("_variableName", null);
+                    this.get("data").showSuccess("Variable `" + this.get("_variableName") + "` created!");
                     this.get("data").openPanel("createPanel");
+                    this.set("_variableName", null);
+                    this.set("_variableType", null);
+                    this.set("_variableValue", null);
                 }
             }
         });
